# vigir_atlas_planning

./: README.md
vigir_atlas_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
vigir_atlas_moveit_config/config/: atlas.srdf  controllers.yaml  joint_limits.yaml  kinematics.yaml  sensors_lidar.yaml  vigir_atlas.srdf.generated  vigir_atlas.srdf.xacro
vigir_atlas_moveit_config/config/controllers/: atlas_v4_controllers.yaml  atlas_v4_no_wry2_controllers.yaml  atlas_v5_controllers.yaml
vigir_atlas_moveit_config/config/group_states/: group_states.srdf
vigir_atlas_moveit_config/config/hands/: l_payload.srdf.xacro  l_robotiq.srdf.xacro  l_stump.srdf.xacro  r_payload.srdf.xacro  r_robotiq.srdf.xacro  r_stump.srdf.xacro  robotiq_hand_tools.srdf.xacro
vigir_atlas_moveit_config/config/head/: real.srdf.xacro  sim.srdf.xacro
vigir_atlas_moveit_config/config/robot/: atlas_v3_disabled_collisions.srdf  atlas_v3_joint_macros.srdf.xacro.xml  atlas_v4_disabled_collisions.srdf  atlas_v4_no_wry2_disabled_collisions.srdf  (+6 more)
vigir_atlas_moveit_config/launch/: atlas_moveit_controller_manager.launch.xml  atlas_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  drake_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  vigir_move_group.launch  vigir_ocs_model.launch  warehouse.launch
(+53 files in other folders)
