<package>

  <name>vigir_atlas_moveit_config</name>
  <version>0.2.0</version>
  <description>
     Customized moveit package for running Atlas with moveit
  </description>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://teamvigir.org/</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>atlas_description</build_depend>
  <run_depend>atlas_description</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
